--- a/modules/ROOT/pages/index.adoc
+++ b/modules/ROOT/pages/index.adoc
@@ -12,7 +12,7 @@ include::partial$experimental.adoc[]
 
 endif::[]
 
-The {product-name} is designed for customers who want to stream data from Apache Kafka (TM) topics into Neo4j or Aura, or publish changes occurring in Neo4j or Aura into Apache Kafka (TM) topics.
+The {product-name} is designed for customers who want to stream data from Apache Kafka (R) topics into Neo4j or Aura, or publish changes occurring in Neo4j or Aura into Apache Kafka (R) topics.
 
 == Components
 
@@ -40,7 +40,7 @@ Some features, such as constraints and CDC, are only available with Neo4j Enterp
 
 === Kafka Connect compatibility
 
-The connector is designed to be compatible with versions of Apache Kafka Connect {kafka-connect-version} and later.
+The connector is designed to be compatible with versions of Apache Kafka Connect {kafka-connect-version} and later, including, AWS Managed Streaming for Kafka, Confluent Cloud and Platform.
 
 === Java compatibility
 
