--- a/modules/ROOT/pages/sink/cud.adoc
+++ b/modules/ROOT/pages/sink/cud.adoc
@@ -2,7 +2,6 @@
 
 The CUD file format is JSON file that represents Graph Entities (Nodes/Relationships) and how to manage them in terms of **C**reate/**U**pdate/**D**elete operations.
 
-
 You can configure the topic in the following way:
 
 [source,json,subs="verbatim,attributes"]
@@ -17,45 +16,12 @@ You can configure the topic in the following way:
 
 We have two formats:
 
-* One for *nodes*:
+* `Node`
+* `Relationship`
 
-+
-We provide an example of a `MERGE` operation
+== Node
 
-+
-[source,json]
-----
-{
-  "op": "merge",
-  "properties": {
-    "foo": "value",
-    "key": 1
-  },
-  "ids": {"key": 1, "otherKey":  "foo"},
-  "labels": ["Foo","Bar"],
-  "type": "node",
-  "detach": true
-}
-----
-
-which would be transformed into the following Cypher query:
-
-[source,cypher]
-----
-UNWIND [..., {
-  "op": "merge",
-  "properties": {
-    "foo": "value",
-    "key": 1
-  },
-  "ids": {"key": 1, "otherKey":  "foo"},
-  "labels": ["Foo","Bar"],
-  "type": "node",
-  "detach": true
-}, ...] AS event
-MERGE (n:Foo:Bar {key: event.ids.key, otherkey: event.ids.otherkey})
-SET n += event.properties
-----
+Node JSON format has a set of fields which contain the operation (`create`, `update`, `merge` and `delete`), label information and node properties.
 
 Let us describe the fields:
 
@@ -101,32 +67,24 @@ with the passed internal id does not exist, it will not be created.
 | no
 | In case the operation is "delete", you can specify if perform a https://neo4j.com/docs/cypher-manual/current/clauses/delete/["detach" delete] that means delete any incident relationships when you delete a node
 
-*N.B.* if no value is provided, the default is true
+*N.B.* if no value is provided, the default is `false`
 
 |===
 
-* And one for *relationships*:
+=== Examples
 
-We provide an example of a `CREATE` operation
+* An example of a `CREATE` operation;
 
 [source,json]
 ----
 {
+  "type": "node",
   "op": "create",
+  "labels": ["Foo", "Bar"],
   "properties": {
-    "foo": "rel-value",
-    "key": 1
-  },
-  "rel_type": "MY_REL",
-  "from": {
-    "ids": {"key": 1},
-    "labels": ["Foo","Bar"]
-  },
-  "to": {
-    "ids": {"otherKey":1},
-    "labels": ["FooBar"]
-  },
-  "type":"relationship"
+    "id": 1,
+    "foo": "foo-value"
+  }
 }
 ----
 
@@ -134,30 +92,107 @@ which would be transformed into the following Cypher query:
 
 [source,cypher]
 ----
-UNWIND [..., {
-  "op": "create",
-  "properties": {
-    "foo": "rel-value",
-    "key": 1
-  },
-  "rel-type": "MY-REL",
-  "from": {
-    "ids": {"key": 1},
-    "labels": ["Foo","Bar"]
-  },
-  "to": {
-    "ids": {"otherKey":1},
-    "labels": ["FooBar"]
-  },
-  "type":"relationship"
-}, ...] AS event
-MATCH (from:Foo:Bar {key: event.from.ids.key})
-MATCH (to:FooBar {otherKey: event.to.ids.otherKey})
-CREATE (from)-[r:MY_REL]->(to)
-SET r = event.properties
+CREATE (n:Foo:Bar) SET n = $properties
 ----
 
-Let's describe the fields:
+* An example of a `UPDATE` operation;
+
+[source,json]
+----
+{
+  "type": "node",
+  "op": "update",
+  "labels": ["Foo", "Bar"],
+  "ids": {
+    "id": 0
+  },
+  "properties": {
+    "id": 1,
+    "foo": "foo-value"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (n:Foo:Bar {id: $ids.id}) SET n += $properties
+----
+
+* An example of a `MERGE` operation;
+
+[source,json]
+----
+{
+  "type": "node",
+  "op": "merge",
+  "labels": ["Foo", "Bar"],
+  "ids": {
+    "id": 0
+  },
+  "properties": {
+    "id": 1,
+    "foo": "foo-value"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MERGE (n:Foo:Bar {id: $ids.id}) SET n += $properties
+----
+
+* An example of a `DELETE` operation;
+
+[source,json]
+----
+{
+  "type": "NODE",
+  "op": "delete",
+  "labels": ["Foo", "Bar"],
+  "ids": {
+    "id": 0
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (n:Foo:Bar {id: $ids.id}) DELETE n
+----
+
+* An example of a `DELETE` operation with detach `true`;
+
+[source,json]
+----
+{
+  "type": "NODE",
+  "op": "delete",
+  "labels": ["Foo", "Bar"],
+  "ids": {
+    "id": 0
+  },
+  "detach": true
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (n:Foo:Bar {id: $ids.id}) DETACH DELETE n
+----
+
+== Relationship
+
+Relationship JSON format has a set of fields which contain the operation (`create`, `update`, `merge` and `delete`), relationship type information, source and target node objects and relationship properties.
+
+Let us describe the fields:
 
 [#table_cud_rels_fields]
 .CUD file **Relationship format** fields description
@@ -172,21 +207,26 @@ Let's describe the fields:
 | The operation type: create/merge/update/delete
 
 | properties
-| no
+| no, in case the operation is `delete`, otherwise yes
 | The properties attached to the relationship
 
 | rel_type
 | yes
 | The relationship type
 
+|ids
+|no
+|Contains the primary/unique keys of the relationship that will be used to look up to the entity
+
 | from
 | yes, if you use the `_id` field reference into `ids` you can leave labels blank
-| Contains the info about the source node of the relationship.
-For the description of the `ids` and `labels` fields, please look at the node fields description above
+| Contains the info about the source node of the relationship.`op` field can only be `merge` and `match` and by default it's `match`.
+For the description of the `ids` and `labels` fields, please look at the node fields description above.
+
 
 | to
 | yes, if you use the `_id` field reference into `ids` you can leave labels blank
-| Contains the info about the target node of the relationship.
+| Contains the info about the target node of the relationship.`op` field can only be `merge` and `match` and by default it's `match`.
 For the description of the `ids` and `labels` fields, please look at the node fields description above
 
 | type
@@ -195,113 +235,301 @@ For the description of the `ids` and `labels` fields, please look at the node fi
 
 |===
 
-Following another example of `DELETE` operation for both node and relationship.
+=== Examples
 
-* For **Node**, the following JSON:
-
-[source,json]
-----
-{
-  "op": "delete",
-  "properties": {},
-  "ids": {"key": 1, "otherKey":  "foo"},
-  "labels": ["Foo","Bar"],
-  "type": "node",
-  "detach": false
-}
-----
-
-will be transformed in the following Cypher query:
-
-[source,cypher]
-----
-UNWIND [..., {
-  "op": "delete",
-  "properties": {},
-  "ids": {"key": 1, "otherKey":  "foo"},
-  "labels": ["Foo","Bar"],
-  "type": "node",
-  "detach": false
-}, ...] AS event
-MATCH (n:Foo:Bar {key: event.ids.key, otherkey: event.ids.otherkey})
-DELETE n
-----
-
-Note that if you set `"detach": true` then the transformation will be:
-
-[source,cypher]
-----
-UNWIND [
-...
-] AS event
-...
-DETACH DELETE n
-----
-
-* For **Relationship**, the following JSON:
+* An example of a `CREATE` operation;
 
 [source,json]
 ----
 {
+  "type": "relationship",
   "op": "create",
-  "properties": {},
-  "rel_type": "MY_REL",
+  "rel_type": "RELATED_TO",
   "from": {
-    "ids": {"key": 1},
-    "labels": ["Foo","Bar"]
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
   },
   "to": {
-    "ids": {"otherKey":1},
-    "labels": ["FooBar"]
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    }
   },
-  "type":"relationship"
+  "properties": {
+    "by": "incident"
+  }
 }
 ----
 
-will be transformed in the following Cypher query:
+which would be transformed into the following Cypher query:
 
 [source,cypher]
 ----
-UNWIND [..., {
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MATCH (end:Bar {id: $to.ids.id}) WITH start, end
+CREATE (start)-[r:RELATED_TO]->(end)
+SET r = $properties
+----
+
+* An example of a `CREATE` operation with `merging` the source node;
+
+[source,json]
+----
+{
+  "type": "relationship",
   "op": "create",
-  "properties": {},
-  "rel_type": "MY_REL",
+  "rel_type": "RELATED_TO",
   "from": {
-    "ids": {"key": 1},
-    "labels": ["Foo","Bar"]
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    },
+    "op": "merge"
   },
   "to": {
-    "ids": {"otherKey":1},
-    "labels": ["FooBar"]
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    },
+    "op": "match"
   },
-  "type":"relationship"
-}, ...] AS event
-MATCH (from:Foo:Bar {key: event.from.ids.key})
-MATCH (to:FooBar {otherkey: event.to.ids.otherkey})
-MATCH (from)-[r:MY_REL]->(to)
+  "properties": {
+    "by": "incident"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MERGE (start:Foo {id: $from.ids.id}) WITH start
+MATCH (end:Bar {id: $to.ids.id}) WITH start, end
+CREATE (start)-[r:RELATED_TO]->(end)
+SET r = $properties
+----
+
+* An example of a `UPDATE` operation;
+
+[source,json]
+----
+{
+  "type": "relationship",
+  "op": "update",
+  "rel_type": "RELATED_TO",
+  "from": {
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
+  },
+  "to": {
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    },
+    "op": "merge"
+  },
+  "properties": {
+    "by": "incident"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MERGE (end:Bar {id: $to.ids.id}) WITH start, end
+MATCH (start)-[r:RELATED_TO]->(end)
+SET r += $properties
+----
+
+* An example of a `UPDATE` operation with `relationship ids`;
+
+[source,json]
+----
+{
+  "type": "relationship",
+  "op": "update",
+  "rel_type": "RELATED_TO",
+  "from": {
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
+  },
+  "to": {
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    },
+    "op": "merge"
+  },
+  "ids": {
+    "id": 5
+  },
+  "properties": {
+    "by": "incident"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MERGE (end:Bar {id: $to.ids.id}) WITH start, end
+MATCH (start)-[r:RELATED_TO {id: $ids.id}]->(end)
+SET r += $properties
+----
+
+* An example of a `MERGE` operation;
+
+[source,json]
+----
+{
+  "type": "relationship",
+  "op": "merge",
+  "rel_type": "RELATED_TO",
+  "from": {
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
+  },
+  "to": {
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    },
+    "op": "merge"
+  },
+  "properties": {
+    "by": "incident"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MERGE (end:Bar {id: $to.ids.id}) WITH start, end
+MERGE (start)-[r:RELATED_TO]->(end)
+SET r += $properties
+----
+
+* An example of a `MERGE` operation with `relationship ids`;
+
+[source,json]
+----
+{
+  "type": "relationship",
+  "op": "MERGE",
+  "rel_type": "RELATED_TO",
+  "from": {
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
+  },
+  "to": {
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    },
+    "op": "merge"
+  },
+  "ids": {
+    "id": 5
+  },
+  "properties": {
+    "by": "incident"
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MERGE (end:Bar {id: to.ids.id}) WITH start, end
+MERGE (start)-[r:RELATED_TO {id: $ids.id}]->(end)
+SET r += $properties
+----
+
+* An example of a `DELETE` operation;
+
+[source,json]
+----
+{
+  "type": "relationship",
+  "op": "delete",
+  "rel_type": "RELATED_TO",
+  "from": {
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
+  },
+  "to": {
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    }
+  }
+}
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MATCH (end:Bar {id: $to.ids.id}) WITH start, end
+MATCH (start)-[r:RELATED_TO]->(end)
 DELETE r
 ----
 
-We can create non-existent nodes at relationship creation/merging, putting `"op": "merge"` in `"from"` and/or `"to"` field.
-By default, "op" is `match`, so the node is not created if it doesn't exist.
-We can write, for example:
+* An example of a `DELETE` operation with `relationship ids`;
 
 [source,json]
 ----
 {
-  "op": "create",
-  "properties": {},
-  "rel_type": "MY_REL",
+  "type": "relationship",
+  "op": "DELETE",
+  "rel_type": "RELATED_TO",
   "from": {
-    "ids": {"key": 1},
-    "labels": ["Foo","Bar"],
-    "op": "merge"
+    "labels": ["Foo"],
+    "ids": {
+      "id": 0
+    }
   },
   "to": {
-    "ids": {"otherKey":1},
-    "labels": ["FooBar"],
-    "op": "merge"
+    "labels": ["Bar"],
+    "ids": {
+      "id": 1
+    }
   },
-  "type":"relationship"
+  "ids": {
+    "id": 5
+  }
 }
+----
+
+which would be transformed into the following Cypher query:
+
+[source,cypher]
+----
+MATCH (start:Foo {id: $from.ids.id}) WITH start
+MATCH (end:Bar {id: $to.ids.id}) WITH start, end
+MATCH (start)-[r:RELATED_TO {id: $ids.id}]->(end)
+DELETE r
 ----
