Update sink pattern cud and error handling pages (#42)

--- a/modules/ROOT/pages/sink/pattern.adoc
+++ b/modules/ROOT/pages/sink/pattern.adoc
@@ -1,32 +1,32 @@
 = Pattern strategy
 
-This strategy allows you to extract nodes and relationships from a Struct object through extraction patterns.
+This strategy allows you to extract nodes and relationships from a kafka message through extraction patterns.
 
 == Node Patterns
 
 Node patterns are defined similar to Cypher node patterns.
 
-. start with `(`
-. define optional list of labels, separated by `:`, such as `:Person` or `:Person:Employee`
-. open property section with `{`
-. define properties to be treated as keys, each prepended with `!`, where at least one key property needs to be provided.
-Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `userId: \__value.user.id`.
+. Start with `(`.
+. Define optional list of labels, separated by `:`, such as `:Person` or `:Person:Employee`.
+. Open property section with `{`.
+. Define properties to be treated as keys, each prepended with `!`, where at least one key property needs to be provided.
+Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `userId: \__key.user.id`.
 By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
-. either
-.. nothing or `*`, meaning that assign all properties from message to the node
-.. list of property names to be assigned to the node from message
+. Either;
+.. Nothing or `*`, meaning that assign all properties from message to the node.
+.. List of property names to be assigned to the node from message.
 Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `userName: \__value.user.name`.
 By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
-.. list of property names _not_ to be assigned to the node, each prepended with `-`, all other properties from message will be assigned to the node
-. close property section with `}`
-. end with `)`
+.. List of property names _not_ to be assigned to the node, each prepended with `-`, all other properties from message will be assigned to the node.
+. Close property section with `}`.
+. End with `)`.
 
 [NOTE]
 You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must contain either all exclusion or inclusion properties.
 
 === Examples
 
-* `MERGE` operation on `User` label with `userId` treated as a key and assigning all properties from JSON object to the node
+* `MERGE` operation on `User` label with `userId` treated as a key and assigning all properties from incoming message value to the node
 +
 [source]
 ----
@@ -40,25 +40,39 @@ or
 (:User{!userId, *})
 ----
 
-* `MERGE` operation on `User` label with `userId` treated as a key and assigning *only* `surname` property from JSON object to the node
+* `MERGE` operation on `User` label with `userId` treated as a key and assigning *only* `surname` property from incoming message to the node
 +
 [source]
 ----
 (:User{!userId, surname})
 ----
 
-* `MERGE` operation on `User` label with `userId` treated as a key and assigning *only* `surname` and `address.city` properties from JSON object to the node
+* `MERGE` operation on `User` label with `userId` treated as a key and assigning *only* `surname` and `address.city` properties from incoming message to the node
 +
 [source]
 ----
 (:User{!userId, surname, city: address.city})
 ----
 
-* `MERGE` operation on `User` label with `userId` treated as key and assigning all properties excluding `address` property from JSON object to the node
+* `MERGE` operation on `User` label with `userId` treated as key and assigning all properties excluding `address` property from incoming message to the node
 +
 [source]
 ----
 (:User{!userId, -address})
+----
+
+* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the key part of the message and assigning *only* `name` and `surname` properties from the value part of incoming message to the node
++
+[source]
+----
+(:User{!userId: __key.id, name: __value.firstName, surname: __value.lastName})
+----
+
+* `MERGE` operation on `User` label with `userId` treated as key which will be taken from the key part of incoming message and assigning *only* `name`, `surname` properties from the value part, `createdBy` from the header and `createdAt` property as current timestamp to the node
++
+[source]
+----
+(:User{!userId: __key.id, name: __value.firstName, surname: __value.lastName, createdBy: __header.username, createdAt: __timestamp})
 ----
 
 === Configuration
@@ -88,56 +102,68 @@ You can transform it into a node by providing the following configuration:
 
 Relationship patterns are defined similar to Cypher relationship patterns.
 
-. node pattern for start node
+. Node pattern for start node.
 . `-[`
-. define relationship type, prepended by `:`, such as `:BOUGHT` or `:KNOWS`
-. open property section with `{`
-. either
-.. nothing or `*`, meaning that assign all properties from JSON object to the node
-.. list of property names to be assigned to the node from JSON object
-.. list of property names _not_ to be assigned to the node, each prepended with `-`, all other properties from JSON object will be assigned to the node
-. close property section with `}`
+. Define relationship type, prepended by `:`, such as `:BOUGHT` or `:KNOWS`.
+. Open property section with `{`.
+. [Optional] Define properties to be treated as keys, each prepended with `!`, where at least one key property needs to be provided.
+Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `relationshipId: \__key.relationship.id`.
+By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
+. Either;
+.. Nothing or `*`, meaning that assign all properties from message to the relationship.
+.. List of property names to be assigned to the relationship from message.
+Individual message fields can be explicitly referenced and assigned to a user defined property in the format of `relationshipType: \__value.relationship.type`.
+By default, messages fields can be referenced as `__timestamp`, `\__headers`, `__key` and `__value`.
+.. List of property names _not_ to be assigned to the relationship, each prepended with `-`, all other properties from message will be assigned to the relationship.
+. Close property section with `}`.
 . `]\->`
-. node pattern for end node
+. Node pattern for end node.
 
 [NOTE]
-You cannot mix inclusion and exclusion so your pattern must contains all exclusion or inclusion properties.
+You cannot mix inclusion and exclusion inside patterns, i.e. your pattern must contains all exclusion or inclusion properties.
 
 === Examples
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all other JSON properties to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all other message properties to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{price,currency}]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price`,  `currency` and `shippingAddress.city` properties from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `price`,  `currency` and `shippingAddress.city` properties from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{price,currency,shippingAddress.city}]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all properties *excluding* `shippingAddress` from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning all properties *excluding* `shippingAddress` from incoming message to the relationship
 +
 [source]
 ----
 (:User{!userId})-[:BOUGHT{-shippingAddress}]->(:Product{!productId})
 ----
 
-. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively, assign `userFirstName` and `userLastName` properties from JSON object to the `User` node and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from JSON object to the relationship
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively, assign `userFirstName` and `userLastName` properties from the message to the `User` node and `MERGE` a `BOUGHT` relationship between them assigning *only* `price` and `currency` properties from the message to the relationship
 +
 [source]
 ----
 (:User{!userId, userFirstName, userLastName})-[:BOUGHT{price, currency}]->(:Product{!productId})
+----
+
+. `MERGE` operation on `User` and `Product` labels with `userId` and `productId` treated as keys respectively and `MERGE` a `BOUGHT` relationship between them assigning *only* `transactionId` property as a key property from key part of the message and `date` from value part of the message to the relationship
++
+[source]
+----
+(:User{!userId})-[:BOUGHT{!transactionId: __key.transaction.id, date: __value.transaction.date}]->(:Product{!productId})
 ----
 
 === Configuration
@@ -163,11 +189,14 @@ You can transform it into a path, like `(n)-[r]->(m)`, by providing the followin
 "neo4j.pattern.relationship.topic.user": "(:User{!userId})-[:BOUGHT{price, currency}]->(:Product{!productId})"
 ----
 
+[NOTE]
+Relationship key properties can only be used with Neo4j Enterprise Edition 5.7 and above, and AuraDB 5.
+
 == Tombstone Records
 
 The pattern strategy supports https://en.wikipedia.org/wiki/Tombstone_(data_store)[tombstone records].
 In order to use it, message key should contain at least the key properties present in the provided pattern and message value should be set as `null`.
 
 [IMPORTANT]
-**Currently, you cannot define multiple patterns for a single topic, such as extracting more than one node or relationship type from a single message.
-In order to achieve this, you have to use a different topic for each pattern.**
+It is not possible to define multiple patterns for a single topic, such as extracting more than one node or relationship type from a single message.
+In order to achieve this, you have to use a different topic for each pattern.
