Add more page aliases

--- a/modules/ROOT/pages/sink.adoc
+++ b/modules/ROOT/pages/sink.adoc
@@ -1,4 +1,5 @@
 = Configuring sink connector
+:page-aliases: kafka-connect/sink.adoc
 
 In this chapter we'll discuss how the Sink instance is configured.
 
